using System.Text.Json.Serialization;
namespace ECommerceApp.Enums
{
    [JsonConverter(typeof(JsonStringEnumConverter))]
    public enum RefundMethod
    {
        Original,  
        PayPal,
        Stripe,
        BankTransfer,
        Manual
    }
}